<resources>
    <string name="app_name">BUBT Bus Tracker</string>
    <string name="login">LogIn</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="login_desc">Never miss your bus. Log in to \ncheck the location now.</string>
    <string name="verify_your_email">Verify Your\n Email</string>
    <string name="verify_desc">Please check your inbox. We have sent a a verification link to your email address. If you didn\'t receive it, can resend the the email.</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="resend_in_n0_59">Resend in\n0:59</string>
    <string name="wrong_email_go_back">Wrong email? Go back</string>
    <string name="forget_npassword">Forget\nPassword?</string>
    <string name="reset_desc">Please enter your email address to receive a password reset link.</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="remember_your_password_log_in">Remember your password? Log in</string>
    <string name="check_verification_status">Check Verification Status</string>
    <string name="bus_logo">Bus Logo</string>
    <string name="bus_name">Bus Name</string>
    <string name="default_bus">Padma</string>
    <string name="bus_schedule">Bus Schedule</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open drawer\n</string>
    <string name="drawer_close">Close drawer</string>
    <string name="start_trip">Start Trip</string>
</resources>