<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center"
        tools:ignore="UselessParent">

        <com.rr.bubtbustracker.view.CustomInputView
            android:id="@+id/name_input"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:logoSrc="@drawable/ic_name"
            app:hintText="@string/full_name"
            app:paddingStart="16dp"
            app:paddingEnd="12dp"
            app:background="@drawable/rounded_bg"
            app:elevation="4dp"/>

        <com.rr.bubtbustracker.view.CustomInputView
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            app:hintText="@string/email"
            app:logoSrc="@drawable/ic_email"
            app:isEmail="true"
            app:paddingEnd="12dp"
            app:paddingStart="16dp"
            app:background="@drawable/rounded_bg"
            app:elevation="4dp"/>

        <com.rr.bubtbustracker.view.CustomInputView
            android:id="@+id/pass_input"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            app:isPassword="true"
            app:logoSrc="@drawable/ic_password_hide"
            app:secondaryLogoSrc="@drawable/ic_password_show"
            app:hintText="@string/password"
            app:paddingStart="16dp"
            app:paddingEnd="12dp"
            app:background="@drawable/rounded_bg"
            app:elevation="4dp"/>

        <com.rr.bubtbustracker.view.CustomInputView
            android:id="@+id/confirm_pass_input"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            app:isPassword="true"
            app:logoSrc="@drawable/ic_password_hide"
            app:secondaryLogoSrc="@drawable/ic_password_show"
            app:hintText="@string/confirm_password"
            app:paddingStart="16dp"
            app:paddingEnd="12dp"
            app:background="@drawable/rounded_bg"
            app:elevation="4dp"/>

        <LinearLayout
            android:id="@+id/busClick"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            style="@style/RoundedEffectStyle">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="1dp"
                android:src="@drawable/ic_bus"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/busName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_bus"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"
                app:drawableLeftCompat="@drawable/ic_arrow_drop_down"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <com.rr.bubtbustracker.view.CustomView
            android:id="@+id/sign_up"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            app:bgColor="@color/blue"
            app:cornerRadius="250dp"
            app:rippleColor="@color/white"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="12dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />


        </com.rr.bubtbustracker.view.CustomView>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="6"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <Button
                android:id="@+id/login2"
                android:text="@string/have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:textColor="#757575"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:textAllCaps="false"
                android:background="?attr/selectableItemBackground"
                android:textSize="16sp"/>

        </LinearLayout>

        <com.rr.bubtbustracker.view.CustomView
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:translationX="-4dp"
            app:rippleColor="@color/blue"
            app:cornerTopRight="250dp"
            app:cornerBottomRight="250dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="12dp"
                android:text="@string/login"
                android:textColor="#424242"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />


        </com.rr.bubtbustracker.view.CustomView>

    </LinearLayout>


</LinearLayout>
