<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_npassword"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="42sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_desc"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <com.rr.bubtbustracker.view.CustomInputView
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            app:hintText="@string/email"
            app:logoSrc="@drawable/ic_email"
            app:isEmail="true"
            app:paddingEnd="8dp"
            app:paddingStart="16dp"
            app:background="@drawable/rounded_bg"
            app:elevation="4dp"/>

        <com.rr.bubtbustracker.view.CustomView
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            app:cornerRadius="250dp"
            app:strokeWidth="1dp"
            app:rippleColor="@color/white"
            app:bgColor="@color/blue">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap,RtlSymmetry" />

                <com.rr.bubtbustracker.view.CustomView
                    android:id="@+id/login"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="14dp"
                    app:strokeWidth="1dp"
                    app:cornerRadius="250dp"
                    app:bgColor="@color/white">

                    <ImageView
                        android:scaleType="center"
                        android:src="@drawable/arrow_forward_blue"
                        android:contentDescription="@string/login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </com.rr.bubtbustracker.view.CustomView>

            </RelativeLayout>

        </com.rr.bubtbustracker.view.CustomView>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/timer_view"
                android:visibility="invisible"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_timer"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/reset_time"
                    android:layout_marginStart="2dp"
                    android:text="@string/resend_in_n0_59"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/remember_your_password_log_in"
                android:textColor="@color/white"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAllCaps="false"
                android:background="?attr/selectableItemBackground"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>