<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_your_email"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="42sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/details"
                android:padding="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_desc"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="16sp"/>

        </LinearLayout>

        <com.rr.bubtbustracker.view.CustomView
            android:id="@+id/check_status"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            app:cornerRadius="250dp"
            app:strokeWidth="1dp"
            app:rippleColor="@color/white"
            app:bgColor="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/check_verification_status"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.rr.bubtbustracker.view.CustomView>

        <com.rr.bubtbustracker.view.CustomView
            android:id="@+id/resend_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            app:cornerRadius="250dp"
            app:strokeWidth="1dp"
            app:rippleColor="@color/white"
            app:bgColor="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resend_verification_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.rr.bubtbustracker.view.CustomView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/timer_view"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_timer"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/resend_time"
                    android:layout_marginStart="2dp"
                    android:text="@string/resend_in_n0_59"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/wrong_email_go_back"
                android:textColor="@color/white"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAllCaps="false"
                android:background="?attr/selectableItemBackground"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>